# ralph-claude

./: .gitignore  .ignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  install.cmd  install.ps1  install.sh  investigation-prd.json.example  plan.md  prd.json.example  prompt.md  pyproject.toml  ralph-attach.sh  ralph-i.sh  ralph.cmd  ralph.ps1  ralph.sh
agents/: opencode.sh
docker/: entrypoint.sh
docs/: background-opencode-loops.md  protocol.md  workspace-feature-plan.md
hooks/: settings.json  stop-iteration.ps1  stop-iteration.sh
plugins/opencode-ralph-hook/src/: index.ts
ralph-tui/: Cargo.toml
ralph-tui/src/: app.rs  main.rs  progress.rs  run.rs  theme.rs  utils.rs  watcher.rs
ralph-tui/src/cli/: args.rs  (+2 more)
skills/prd/: SKILL.md
skills/ralph/: SKILL.md
src/ralph/: __init__.py  agents.py  attach.py  branch.py  cli.py  install_skills.py  loop.py  opencode_server.py  prompt.py  rpc.py  session.py  version.py  workspace.py
src/ralph_uv/: __init__.py  agents.py  attach.py  branch.py  cli.py  daemon.py  daemon_loop.py  daemon_rpc.py  interactive.py  loop.py  opencode_lifecycle.py  rpc.py  session.py  ziti.py
tasks/opencode-server-management/: prd.json  prd.md  progress.txt
tasks/ralph-activity-control/: prd.json  progress.txt
tasks/ralph-infrastructure-unification/: prd.json  progress.txt
tasks/ralph-tui/: prd.json  progress.txt
tasks/ralph-tui-modularization/: prd.md
tasks/remote-daemon/: prd.json  progress.txt
tasks/remote-loop-execution/: architecture.md  prd.json  prd.md  progress.txt
tasks/test-agent-loop/: hello.txt  test1.txt
(+27 files in other folders)
