[project]
name = "ralph"
dynamic = ["version"]
description = "Autonomous AI agent loop runner"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
    "libtmux>=0.37",
]

[project.scripts]
ralph = "ralph.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ralph/version.py"
pattern = 'TOOL_VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.ty.environment]
python-version = "3.12"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = []
